--- a/views/pages/winner.ejs
+++ b/views/pages/winner.ejs
@@ -14,7 +14,7 @@
 
     <ul>
         <% results.forEach(function(r) { %>
-            <li><%= r.nickname %> - <%= r.correctAnswers %> - <%= r.totalTime  %></li>
+            <li><%= r.nickname %> - <%= r.correctAnswers %></li>
         <% }); %>
     </ul>
 
